# swabtab

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  OPTIMIZATIONS.md  README.md
src/: Config.cpp  Config.h  TabSwitcher.cpp  TabSwitcher.h  Utils.cpp  Utils.h  WindowManager.cpp  WindowManager.h  main.cpp
